<resources>
    <!-- KART FUNKSJON -->
    <string name="app_name" >Ocean Awareness </string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaGliYWJlIiwiYSI6ImNrOHVkcWQ5eDAxZWIzanFxbHpxZzhxbXcifQ.5LZQ6tZnTbUXugtbSTRG7A</string>
    <string name="skjermbakgrunn">Skjermbakgrunn</string>
    <string name="tilbakeknapp">tilbakeknapp</string>
    <string name="nattmodus">Nattmodus</string>
    <string name="om_appen">Om appen</string>
    <string name="om_redningstjenesten">Om redningstjenesten</string>
    <string name="av">Av</string>
    <string name="p">På</string>
    <string name="innstillinger">Innstillinger</string>

    <!-- MENY AKTIVITET -->
    <string name="kompass">Kompass</string>
    <string name="knapp">knapp</string>
    <string name="sjekk_hav_og_v_r">Sjekk hav og vær</string>
    <string name="havaktivitet">Havaktivitet</string>
    <string name="ekstremv_rvarsel">EKSTREMVÆRVARSEL</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="v_rvarsel">Værvarsel</string>
    <string name="b_lgevarsel">Bølgevarsel</string>
    <string name="ekstremv_r">ekstremvær</string>
    <string name="havtempratur">havtempratur</string>

    <!-- HAVAKTIVITET -->
    <string name="bolgehoyde_icon">bolgehoyde icon</string>
    <string name="stromretning_icon">stromretning icon</string>
    <string name="icepresence_icon">icepresence icon</string>
    <string name="stromfart_icon">stromfart icon</string>
    <string name="bolgeretning_icon">bolgeretning icon</string>
    <string name="klokkeslett">Klokkeslett</string>
    <string name="koordinater">Koordinater:</string>
    <string name="dato">Dato:</string>
    <string name="kl">%1$s:00</string>
    <string name="feilmelding"> Kan ikke hente informasjon </string>
    <string name="icepresence"> Icepresence\n %1$s %2$s</string>
    <string name="temp"> Havtemperatur\n  %1$s  °C </string>
    <string name="seacurrentspeed"> Havstrømfart\n %1$s  %2$s </string>
    <string name="seacurrentdirection"> Havstrømretning\n  %1$s ° </string>
    <string name="totalwavedirection"> Bølgeretning\n  %1$s ° </string>
    <string name="waveheight"> Bølgehøyde\n %1$s %2$s</string>
    <string name="koordinat"> KOORDINATER: \n  Latitude =  %1$s \nLongitude =  %2$s</string>

    <!-- VÆRVARSEL AKTIVITET -->
    <string name="hoved"> %1$s °C</string>
    <string name="cloud"> Skyer\n %1$s  %2$s </string>
    <string name="fog"> Tåke\n %1$s  %2$s </string>
    <string name="sky_icon">Skyer</string>
    <string name="taake_icon">Tåke</string>
    <string name="fukt_icon">Luftfuktighet</string>
    <string name="vindretning_icon">Vindretning</string>
    <string name="vindstyrke_icon">Vindstyrke</string>
    <string name="regn_icon">Nedbør</string>
    <string name="kart_knapp">kart knapp</string>
    <string name="humid">Luftfuktighet\n %1$s %2$s </string>
    <string name="windDir"> Vindretning:  %1$s \n Grader: %2$s</string>
    <string name="windSpeed"> Vindstyrke\n %1$s m/s</string>
    <string name="date"> Dato: %1$s</string>
    <string name="precipitation">Nedbør\n %1$s %2$s</string>

    <!-- SETTINGS AKTIVITET -->
    <string name="termsOfServiceInnhold">Ocean Awareness er en gratis mobilapplikasjon utviklet av Emma Bergstein Bergh, Hanan Timraz,  Hiba Benhaida, Joakim Foss Johansen, Sofie Bragnes og Rokas Magnus. Applikasjonen er utarbeidet som en del av et prosjektarbeid i emnet IN2000 våren 2020 ved Universitetet i Oslo. Appen gir båtførere i Norge informasjon om vær- og havaktivitet, med den hensikt å forbygge ulykker blant båtførere. \n \n

Eventuelle e-postmeldinger som blir sendt til utviklerne vil bli lagret til henvendelsen er besvart.
    </string>
    <string name="redningstjenesten">Redningsselskapet er en frivillig, humanitær medlemsorganisasjon som jobber for å gjøre det tryggere å ferdes på og ved sjøen. Det du som båtfører kan bidra med er å være best mulig forberedt, for å forebygge uønskede hendelser for deg og dine nære. \n\n Skulle det oppstå en ulykke når du er ute til sjøs, benytt deg av følgende nødnumre: \n
NØDANROP MED TELEFON - HELE DØGNET \n
Kystradioen 	120 \n
Politiet		112 \n\n
NØDANROP MED RADIO - HELE DØGNET \n
VHF Kanal 16 \n\n
REDNINGSSELSKAPET \n
Ved assistanse (Servicetelefonen)		02016  \n
Assistanse i havn (Falck) 			815 70 411
</string>
</resources>
